--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
 </head>
 
 <body>
-    <h1>Hello Git, Github!!</h1>
+    <div class="contents">
+        <h1>Hello Git, Github!!</h1>
+        <form action="">
+            <input type="text" id="arg1" class="input-area">
+            <input type="text" id="arg2" class="input-area">
+            <button id="sum_btn">割り算</button>
+        </form>
+        <p id="output-area">
+        </p>
+    </div>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
