出力画面の修正

--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 <body>
     <div class="contents">
         <h1>Hello Git, Github!!</h1>
-        <form action="">
-            <input type="text" id="arg1" class="input-area">
-            <input type="text" id="arg2" class="input-area">
-            <button id="sum_btn">割り算</button>
-        </form>
-        <p id="output-area">
-        </p>
+        <input type="text" id="arg1" class="input-area">
+        <input type="text" id="arg2" class="input-area">
+        <button id="sum_btn">割り算</button>
+        <div>
+            arg1 / arg2は？
+            <p id="output-area">
+
+            </p>
+        </div>
     </div>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
