--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
             </p>
         </div>
+        <p>変更しました 渡邊暁大</p>
     </div>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
